--- a/Ion Drift/Ion-data-condense.ipynb
+++ b/Ion Drift/Ion-data-condense.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -39,38 +39,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/Users/austinmcdonald/Desktop/data/Ion-stuff/Ion mobilitys/Argon/091418-dirty/091318-dirtygas-A250/']"
+       "['/Users/austinmcdonald/Desktop/XenonIon/120318/300/',\n",
+       " '/Users/austinmcdonald/Desktop/XenonIon/120318/250/',\n",
+       " '/Users/austinmcdonald/Desktop/XenonIon/120318/400/',\n",
+       " '/Users/austinmcdonald/Desktop/XenonIon/120318/350/',\n",
+       " '/Users/austinmcdonald/Desktop/XenonIon/120318/200/']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PATH = '/Users/austinmcdonald/Desktop/data/Ion-stuff/Ion mobilitys/Argon/091418-dirty/'\n",
+    "PATH = '/Users/austinmcdonald/Desktop/XenonIon/120318/'\n",
     "folders = glob.glob(PATH+\"*/\")\n",
     "folders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'091318-dirtygas-A250'"
+       "'300'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
