--- a/MagBoltz/MB-data-extraction.ipynb
+++ b/MagBoltz/MB-data-extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def DataExtractor(file):\n",
@@ -657,47 +659,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['MEAN',\n",
-       " 'ELECTRON',\n",
-       " 'ENERGY',\n",
-       " '=',\n",
-       " '',\n",
-       " '',\n",
-       " '1.6355',\n",
-       " 'EV.',\n",
-       " 'ERROR',\n",
-       " '=',\n",
-       " '',\n",
-       " '+-',\n",
-       " '',\n",
-       " '',\n",
-       " '',\n",
-       " '0.72%']"
+       "['LONGITUDINAL', 'DIFFUSION', '=', '0.2810D+03', '+-', '', '', '', '', '7.2%']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "content[86].split(' ')"
+    "content[75].split(' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['=', '', '675.616', 'MICRONS/CENTIMETER**0.5', '', '+-', '', '', '', '3.74%']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content[77].split(' ')"
+   ]
   },
   {
    "cell_type": "code",
@@ -1137,7 +1135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
