--- a/MagBoltz/MB-XeHe-analysis-V10.ipynb
+++ b/MagBoltz/MB-XeHe-analysis-V10.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "array([  0.,  80.,  85.,  90., 100.])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -154,13 +154,14 @@
     "    X = X[SORT]\n",
     "    Y = Y[SORT]\n",
     "    Yer = Yer[SORT]\n",
+    "    \n",
     "    return X,Y,Yer,lab\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -206,6 +207,7 @@
     "#plt.ylim(0,2)\n",
     "#plt.semilogx()\n",
     "plt.xlim(0,300)\n",
+    "#plt.xlim(0,100)\n",
     "#plt.savefig(\"/Users/austinmcdonald/Desktop/Daigo/\"+'vel.png')\n",
     "\n",
     "plt.show()"
